fix(navBar): reduce spacement on mobile

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/variables.scss";
+
 .container {
     position: sticky;
     top: 0;
@@ -22,4 +24,8 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     padding: 1rem 2rem 1rem 2rem;
     border-radius: 1rem;
+
+    @media screen and (max-width: $tablet) {
+        gap: 1rem;
+	}
 }
